<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_cell_height"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/recyclerview_ingredient_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/drawable_ingredient_item"
        android:layout_marginRight="@dimen/list_content_margin"
        android:gravity="center"
        android:textSize="16sp"
        tools:text="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_cell_height"
        android:layout_toRightOf="@id/recyclerview_baking_item"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/recyclerview_ingredient_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textSize="16sp"
                android:layout_marginRight="@dimen/list_content_inter_value"
                tools:text="2" />

            <TextView
                android:id="@+id/recyclerview_ingredient_measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textSize="16sp"
                tools:text="CUP" />

        </LinearLayout>

        <TextView
            android:id="@+id/recyclerview_ingredient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="top"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Graham Cracker crumbs" />

    </LinearLayout>

</LinearLayout>